<resources>
    <string name="app_name">Quick News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Quick News</string>
    <string name="nav_header_subtitle">News you can\'t miss</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    //Categories
    <string name="technology">Technology</string>
    <string name="sports">Sports</string>
    <string name="science">Science</string>
    <string name="health">Health</string>
    <string name="entertainment">Entertainment</string>
    <string name="business">Business</string>
    <string name="general">General</string>
    <string name="favourite">Favourite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_in_detail">View in Detail</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="remove_from_favourites">Remove from Favourites</string>
    <string name="no_news_added_to_favourite">No news added to favourite</string>
    <string name="see_news_of_category">See News of category:</string>
    <string name="select_category">Select Category</string>
    <string name="share">Share</string>

</resources>
