<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_general"
                android:icon="@drawable/globe"
                android:title="@string/general"/>
        <item
                android:id="@+id/nav_business"
                android:icon="@drawable/dollar"
                android:title="@string/business"/>
        <item
                android:id="@+id/nav_entertainment"
                android:icon="@drawable/entertainment"
                android:title="@string/entertainment"/>
        <item
                android:id="@+id/nav_health"
                android:icon="@drawable/heart"
                android:title="@string/health"/>
        <item
                android:id="@+id/nav_science"
                android:icon="@drawable/science"
                android:title="@string/science"/>
        <item
                android:id="@+id/nav_sports"
                android:icon="@drawable/ball"
                android:title="@string/sports"/>
        <item
                android:id="@+id/nav_technology"
                android:icon="@drawable/technology"
                android:title="@string/technology"/>

        <item
                android:id="@+id/nav_favourite"
                android:icon="@drawable/star_grey"
                android:title="@string/favourite"/>

    </group>

</menu>
